--- a/templates/all_users.html
+++ b/templates/all_users.html
@@ -6,7 +6,8 @@
 <ul>
 {% for user in users %}
 	<li> 
-		<a href="/users/ {{ user.user_id }}"> {{ user.email }}
+		<a href="/users/ {{ user.user_id }}">
+		 {{ user.email }}
 	</li>
 {% endfor %}
 </ul>
