--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} {{ user.user_id }} - Details {% endblock %}
+{% block title %} {{ user.email }}'s Page {% endblock %}
 
 {% block body %}
 <h1> User number: {{ user.user_id }} </h1>
