--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,7 +24,7 @@
 	</form>
 
 	<h2>Login</h2>
-	<form action="/login"> 
+	<form action="/login" method="POST"> 
 		<p>
 			Email <input type="text" name="email">
 		</p>
